<resources>
    <string name="app_name">Agora-AIEngine-Example</string>
    <string name="start_speak">开始发言</string>
    <string name="end_speak">结束发言</string>
    <string name="voice_change_enable">开启变声</string>
    <string name="voice_change_disable">关闭变声</string>
    <string name="lang_switch_en">切换英文AI</string>
    <string name="lang_switch_cn">切换中文AI</string>
    <string name="exit">退出</string>
    <string name="download">下载</string>
    <string name="cancel_download">取消下载</string>
    <string name="mute">静音</string>
    <string name="unmute">取消静音</string>
    <string name="switch_ai_role">切换角色</string>
</resources>